OC2 = OpenCart 2 (alleen OpenCart 2.3 wordt nog ondersteund)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.1.0 (2020-11-??)
------------------
Features:
- WC|MA: Op het factuurstatusoverzicht kun je nu de factuurgegevens opnieuw
  versturen als er een fout is ontdekt tussen de bestelling in de webshop en de
  factuur in Acumulus.
- WC|MA: Op het factuurstatusoverzicht heeft het veld waarop je de betaaldatum
  kunt invullen nu een standaardwaarde die op dezelfde manier bepaald wordt als
  bij automatische verzending.
- WC: Tekst "buitenlandse btw" ingekort.
- ALL: Het registratieformulier maakt geen gebruik meer van html <details>. Dit
  opdat het in alle ondersteunde webshops correct getoond wordt.
- ALL: Sta toe dat fieldsets geen fields hebben, alleen een titel en
  beschrijving.

Bugs:
- PS: Instellingenformulier: password wordt niet meegestuurd, dus maak het niet
  verplicht en accepteer leeg als "geen verandering".
- PS: Het registratieformulier dient niet zichtbaar te zijn in het admin menu.

Refactorings:
- ALL: Do not use "Header" in fieldset ids.

6.0.4 (2020-11-15)
------------------
Features:
- PS: Added the registration form to PS.
- ALL: verbeterde helpteksten op de instellingenformulieren als de logingegevens
  ontbreken of fout zijn.
- ALL: Over Acumulus info-blok bevat bij een proefcontract nu ook info over het
  aantal resterende boekingen en of er problemen zijn met e-mailverzending.

Bugs:
- ALL: Acumulus API misc/about en misc/my_acumulus geven geen 401 meer terug,
  maar een 403.
- JOO: Improved styling of forms and added logo to register form.
- ALL: Allow attribute values in class FormRenderer to be defined as an array.
- ALL: Gebruik van PHP 7 language construct.

6.0.3 (2020-10-26)
------------------
Features: