@@ -1,0 +1,47 @@
+<?php
+namespace Siel\Acumulus\PrestaShop\Shop;
+
+use Siel\Acumulus\Shop\InvoiceStatusForm as BaseInvoiceStatusForm;
+
+/**
+ * Provides PrestaShop specific handling for the Invoice status form.
+ */
+class InvoiceStatusForm extends BaseInvoiceStatusForm
+{
+    /**
+     * {@inheritdoc}
+     */
+    public function getFieldDefinitions()
+    {
+        $result = parent::getFieldDefinitions();
+
+        // Make it 1 fieldset:
+        $allFields = [];
+        foreach ($result as $key => $field) {
+            if ($field['type'] === 'fieldset' || $field['type'] === 'details') {
+                if (isset($field['legend'])) {
+                    $allFields[$key] = [
+                        'type' => 'markup',
+                        'value' => $field['legend'],
+                    ];
+                }
+                foreach ($field['fields'] as $childKey => $childField) {
+                    $allFields[$childKey] = $childField;
+                }
+            } else {
+                $allFields[$key] = $field;
+            }
+        }
+        $result = [
+            'acumulus' => [
+                'type' => 'fieldset',
+                'legend' => 'Acumulus',
+                'fields' => $allFields,
+                'icon' => 'icon-acumulus',
+            ]
+        ];
+        // Add icons.
+
+        return $result;
+    }
+}
